[package]
name = "kademlia-dht"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.38.0"
futures = "0.3.15"
async-std = "1.9.0"
env_logger = "0.8.3"
libp2p-kad = "0.30.0"
sc-network = "0.9.0"
rand = "0.8.4"
actix-web = "3"
serde = "1.0.126"