[package]
name = "kademlia-dht"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.39.1"
futures = "0.3.15"
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.3"
serde = "1.0.126"
jsonrpc-http-server = "17.1.0"
serde_json = "1.0.68"
chrono = "0.4.19"